--- a/Rezepte/GNUmakefile
+++ b/Rezepte/GNUmakefile
@@ -1,7 +1,9 @@
 BASENAME:=dal-makhni Mürbeplätzchen Brownies Pfefferkuchen Einheitentabelle
 TEX:=$(addsuffix .tex,$(BASENAME))
-ALL:=$(TEX:.tex=.pdf)
-INTERMEDIATE:=$(TEX:.tex=.aux) $(TEX:.tex=.fdb_latexmk) $(TEX:.tex=.fls) $(TEX:.tex=.log) $(TEX:.tex=.nav) $(TEX:.tex=.out) $(TEX:.tex=.snm) $(TEX:.tex=.synctex.gz) $(TEX:.tex=.toc) $(TEX:.tex=.vrb)
+# The following list also includes the generated .tex files
+TEXMORE:=$(TEX) Mürbeplätzchen-Fraktur.tex Pfefferkuchen-Fraktur.tex
+ALL:=$(TEXMORE:.tex=.pdf)
+INTERMEDIATE:=$(TEXMORE:.tex=.aux) $(TEXMORE:.tex=.fdb_latexmk) $(TEXMORE:.tex=.fls) $(TEXMORE:.tex=.log) $(TEXMORE:.tex=.nav) $(TEXMORE:.tex=.out) $(TEXMORE:.tex=.snm) $(TEXMORE:.tex=.synctex.gz) $(TEXMORE:.tex=.toc) $(TEXMORE:.tex=.vrb)
 
 all: $(ALL)
 
@@ -9,14 +11,24 @@ all: $(ALL)
 	-@echo "NOTE: use 'luaotfload-tool -u' if you experience any looping of latexmk"
 	latexmk -f -pdflatex=lualatex -pdf -synctex=1 -interaction=nonstopmode $<
 
+Mürbeplätzchen: Mürbeplätzchen-Fraktur.pdf Mürbeplätzchen.pdf
+Pfefferkuchen: Pfefferkuchen-Fraktur.pdf Pfefferkuchen.pdf
+
+Plätzchen: Plätzchen.tar
+Plätzchen.tar: Mürbeplätzchen Pfefferkuchen
+	tar -cvf $@ $(addsuffix *.pdf,$^)
+
+%-Fraktur.tex: %.tex
+	sed '/\\documentclass/ s|,fraktur=false|,fraktur=true|' $< > $@
+
 dustoff:
-	rm -f $(INTERMEDIATE)
+	rm -f $(wildcard $(INTERMEDIATE))
 
 clean CLEAN: dustoff
-	rm -f $(ALL:.tex=.pdf)
+	rm -f $(wildcard $(TEXMORE:.tex=.pdf) *-Fraktur.tex) Plätzchen.tar
 
 rebuild: clean all
 REBUILD: CLEAN all
 
 .INTERMEDIATE: $(INTERMEDIATE)
-.PHONY: all clean CLEAN rebuild REBUILD dustoff
+.PHONY: all clean CLEAN rebuild REBUILD dustoff Pfefferkuchen Mürbeplätzchen Plätzchen
